fixed modal scrollbar issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,6 +47,11 @@ body {
     .text-orange {
         color: g.$orange;
     }
+
+    &.modal-open {
+        padding-right: 0 !important;
+        overflow-y: inherit !important;
+    }
 }
 
 @media only screen and (max-width: 1000px) {
